<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/Movie_image"
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/image_description"/>

    <RelativeLayout
        android:id="@+id/movie_list_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/Movie_image">

        <TextView
            android:id="@+id/movie_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textSize="20sp"
            android:text="@string/movie_name"/>

        <TextView
            android:id="@+id/movie_list_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textSize="9sp"
            android:maxLines="3"
            android:layout_below="@id/movie_list_title"
            android:text="@string/movie_description" />

        <TextView
            android:id="@+id/movie_list_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textSize="18sp"
            android:layout_below="@id/movie_list_description"
            android:text="@string/movie_character" />

        <TextView
            android:id="@+id/movie_list_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textSize="11sp"
            android:layout_below="@id/movie_list_char"
            android:text="@string/has_seen" />
    </RelativeLayout>
</RelativeLayout>